--- a/style.css
+++ b/style.css
@@ -1,19 +1,42 @@
 #grid-container{
     display:grid;
     background-color: bisque;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows:1fr 4fr;
+    grid-template-columns: 1.2fr 5fr;
+    grid-template-rows:1fr 3fr;
+    font-family: monospace;
 }
+
 /*----------sidebar----------*/
 
 #sidebar{
     background-color: #1992d4;
     grid-column: 1;
     grid-row: 1 /3;
+    display: grid;
+    grid-template-rows: 70px 220px 100px 1fr;
+    padding: 5px;
+    padding-left: 0px;
 }
-#menu li, #help {
+#menu li, #help li{
     color: white;
-    font-size: 20px;
+    font-size: 18px;
+    list-style: none;
+    padding: 5px;
+}
+#menu{
+    grid-row: 2;
+    
+}
+#help{
+    grid-row: 3;
+}
+#title{
+    grid-row: 1;
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    justify-self: center;
+    padding: 8px;
 }
 
 /*----------header----------*/
@@ -27,6 +50,40 @@
     grid-template-rows: 60px 60px;
     padding: 30px;
     margin-bottom: 30px;
+}
+#search-bar{
+    background: #d0d5d8;
+    border-radius: 50px;
+    grid-column: 1 / 3;
+    grid-row: 1;
+    height: 30px;
+    opacity: 1;
+    border-color: #1992d4;
+    border-width: 2px;
+    border-style: solid;
+    display: flex;
+    justify-content: left;
+    padding-left: 15px;
+    margin-right: 20%;
+
+}
+#search-bar p{
+    opacity: .5;
+    align-self: center;
+    justify-self: center;
+}
+#profile{
+    grid: column 3px;
+    grid-row: 1;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+#profile img{
+    height: 35px;
+    display:block;
+    margin: 12px;
+    justify-self: center;
 }
 #action-btns{
     background-color: blue;
@@ -59,8 +116,9 @@ button{
     grid-column: 1 / 3;
     grid-row: 1 / 7;
     display: grid;
+    justify-items: center;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
     padding: 10px;
     
 }
