--- a/style.css
+++ b/style.css
@@ -47,16 +47,15 @@
     grid-row: 1;
     display: grid;
     grid-template-columns: 4fr 3fr 1.2fr;
-    grid-template-rows: 60px 60px;
+    grid-template-rows: .5fr .5fr;
     padding: 30px;
-    margin-bottom: 30px;
 }
 #search-bar{
     background: #d0d5d8;
     border-radius: 50px;
     grid-column: 1 / 3;
     grid-row: 1;
-    height: 30px;
+    height: 40px;
     opacity: 1;
     border-color: #1992d4;
     border-width: 2px;
@@ -90,6 +89,12 @@
     margin-top: 0px;
     grid-row: 2;
     grid-column: 1;
+    display: flex;
+    align-items: center;
+}
+#greeting img{
+    height: 80px;
+    padding-right: 10px;
 }
 #action-btns{
     grid-row: 2;
@@ -97,6 +102,7 @@
     display: flex;
     justify-self: center;
     align-items: center;
+    
 }
 
 button{
@@ -105,8 +111,8 @@ button{
     border-radius: 100px;
     border-color: #1992d4;
     padding: 8px 10px;
-    width: 60px;
-    height: 30px;
+    width: 100px;
+    height: 40px;
     margin: 4px;
     display: flex;
     text-align: center ;
